Fix css for grid layouts and add support for gap

--- a/src/media-viewer/editor.scss
+++ b/src/media-viewer/editor.scss
@@ -3,6 +3,12 @@
 		display: none;
 	}
 
+	&__items {
+		> div {
+			display: none;
+		}
+	}
+
 	&.is-editing {
 		.wp-block-pulsar-media-viewer__items {
 			aspect-ratio: unset;
